--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.0
+  http: ^0.13.3
+  equatable: ^2.0.0
+  json_annotation: ^4.0.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -46,6 +51,10 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  build_runner: '2.4.6'
+  build_runner_core: '7.2.1'
+  logging: '1.1.0'
+  json_serializable: ^6.6.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
