--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  bloc: ^7.0.0
-  flutter_bloc: ^7.0.0
+  flutter_bloc: ^8.1.3
   http: ^0.13.3
   equatable: ^2.0.0
   json_annotation: ^4.0.1
@@ -55,6 +54,8 @@ dev_dependencies:
   build_runner_core: '7.2.1'
   logging: '1.1.0'
   json_serializable: ^6.6.1
+  bloc_test: ^9.1.4
+  mockito: ^5.4.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
